[package]
name = "miwa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
regex = { version = "1.7.3", features = ["pattern"] }
gpp = { version = "0.6.2" }
toml = { version = "0.7.3" }